--- a/catGirl/catGirl.csproj
+++ b/catGirl/catGirl.csproj
@@ -74,6 +74,12 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Level2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Level2.Designer.cs">
+      <DependentUpon>Level2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Level3.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Level2.resx">
+      <DependentUpon>Level2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Level3.resx">
       <DependentUpon>Level3.cs</DependentUpon>
@@ -182,6 +191,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\back2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\5sec.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Diamond.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bomb.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PinkPanther.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PinkPanther1.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
